--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,19 @@
 body {
     font-family: 'DM Sans', sans-serif;
 }
+
+.font-dmsans {
+    font-family: 'DM Sans', sans-serif;
+}
+
+.font-arabic {
+    font-family: 'Amiri', serif;
+}
+
+.font-malayalam {
+    font-family: 'Noto Sans Malayalam', sans-serif;
+}
+
+.font-urdu {
+    font-family: 'Noto Serif Georgian', serif;
+}
